--- a/landingpage.css
+++ b/landingpage.css
@@ -16,7 +16,7 @@ body{
     background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
-    overflow-x: hidden;
+    overflow: hidden;
     background-position: center;
     width: 100%;
 }
@@ -160,7 +160,8 @@ nav i{color: white;}
     height: 70vh;
     /* background-color: #F3F4F6; */
     padding: 50px 100px;
-    
+    animation-name: content;
+    animation-duration: 2s;
 }
 
 .offer h1{
